<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_field_name"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_color"
                tools:ignore="VisualLintTextFieldSize" />


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbNumeric"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/field_is_numeric"
                tools:ignore="RtlHardcoded" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acbButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/add_field"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/black_border"
                    android:layout_weight="1"
                    tools:ignore="SpeakableTextPresentCheck">

                    <LinearLayout
                        android:id="@+id/textLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/black_border"
                            android:text="@string/strings"
                            android:gravity="center"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/black_border"
                    tools:ignore="SpeakableTextPresentCheck">

                    <LinearLayout
                        android:id="@+id/intLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/black_border"
                            android:text="@string/numeric"
                            android:gravity="center"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>